sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:9: error: illegal start of statement
      match(getCouleur(i)){
      ^